# agl-home-django

./: .envrc  .gitignore  .sops.yaml  README.md  _default.nix  default.nix  dev-shell.nix  example-keycloakl-oidc-config.json  flake.nix  nix-agl-home-django  pyproject.toml  result  shell.nix
.direnv/: nix-profile-.2774.3dc440faeee9  nix-profile-.2774.3dc440faeee9.rc
agl_home_django/: manage.py  runserver.py  shell.nix
agl_home_django/.direnv/: nix-profile-.2774.3dc440faeee9  nix-profile-.2774.3dc440faeee9.rc
agl_home_django/agl_home_django/: asgi.py  settings.py  urls.py  wsgi.py
agl_home_django/agl_home_django/settings/: __init__.py  base.py  dotenvpath.py  yaml_path.py
agl_home_django/main/: forms.py  urls.py
agl_home_django/main/templates/: base.html  landing_page.html  login.html  profile.html  register.html
agl_home_django/main/views/: __init__.py
endoreg_home/: manage.py
endoreg_home/content_management/: urls.py  views.py
endoreg_home/content_management/templates/: base.html  landing_page.html
endoreg_home/endoreg_home/: asgi.py  celery.py  urls.py  wsgi.py
endoreg_home/endoreg_home/settings_base/: __init__.py  base_urls.py  celery.py  cookiebanner.py  logging_conf.py  oauth.py  static.py
endoreg_home/endoreg_home/settings_dev/: __init__.py
endoreg_home/endoreg_home/settings_prod/: __init__.py
endoreg_home/monitoring/: urls.py  views.py
endoreg_home/monitoring/tasks/: __init__.py  network_devices.py
endoreg_home/user_authentication/: decorators.py  models.py  urls.py  views.py
trash/: default.nix  flake copy.nix  nix-agl-home-django  pyproject.toml  shell.nix
(+7 files in other folders)
