[tool.poetry]
name = "agl-home-django"
version = "0.1.0"
description = ""
authors = ["Thomas J. Lux"]
license = "GNU 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
endoreg-db = "^0.1.0"
django = "^5.0.1"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
