[tool.poetry]
name = "agl-home-django"
version = "0.1.0"
description = ""
authors = ["Thomas J. Lux"]
license = "GNU 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
endoreg-db = "^0.1.0"
django = "~4.2"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.4"
djangorestframework = "^3.14.0"
certifi = "^2024.2.2"
django-allauth = "^0.61.1"
django-cookiebanner = "^0.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
