[tool.poetry]
name = "agl-home-django"
version = "0.1.0"
description = ""
authors = ["Thomas J. Lux"]
license = "GNU 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
#endoreg-db = "^0.1.0"
django = "~4.2"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.4"
djangorestframework = "^3.14.0"
django-allauth = "^0.61.1"
django-cookiebanner = "^0.2.8"
whitenoise = "^6.6.0"
numpy = "^1.26.4"
endoreg-db = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# pip install django==4.2 gunicorn django-bootstrap5 djangorestframework django-allauth django-cookiebanner whitenoise numpy
# pip install -e ../endoreg-db/